--- a/backend/src/main/resources/templates/MainPage.html
+++ b/backend/src/main/resources/templates/MainPage.html
@@ -32,7 +32,7 @@
     <br>
     <label>Estimated daily travel time: (recommend to be 10 hours)</label>
     <div class="dailydropdown">
-        <select class="dailydropselection" id="daily" onchange="updateAttributes()">
+        <select class="dailydropselection" id="daily">
             <option>1</option>
             <option>2</option>
             <option>3</option>
