--- a/backend/src/main/resources/static/css/MainPage.css
+++ b/backend/src/main/resources/static/css/MainPage.css
@@ -38,8 +38,8 @@ section {
     backdrop-filter: blur(5px);
 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
 }
 
 /*header {*/
@@ -49,7 +49,7 @@ section {
 
 h1 {
     font-size: 33px;
-    color: mediumseagreen;
+    color: #3e5552;
     text-align: center;
     /*margin-bottom: 0;*/
     position: absolute;
@@ -63,7 +63,7 @@ h1 {
 h2 {
     /*margin-top: 0;*/
     font-size: 20px;
-    color: darkseagreen;
+    color: #5a7069;
     position: absolute;
     top: 80px;
     left: 50%;
@@ -76,8 +76,14 @@ h2 {
     /*background-color: #ddd;*/
     /*border-radius: 5px;*/
     margin-top: 15%;
-    margin-left: 10%; /* Adjust the margin value as needed */
+    /*margin-left: 10%; !* Adjust the margin value as needed *!*/
     text-align: left; /* Align the content to the left */
+}
+
+.input-row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .form-section label,
@@ -97,4 +103,59 @@ h2 {
     box-sizing: border-box; /* Include padding in width calculation */
     background-color: rgba(255, 255, 255, 0.8); /* Add a background color */
     border-top: 1px solid #ddd; /* Add a top border for separation */
+}
+
+/* Styling the select elements */
+.dailydropselection,
+.tabledropselection {
+    font-family: "Comic Sans MS", sans-serif;
+    font-size: 16px;
+    display: block;
+    width: 55px;
+    max-width: 100%;
+    line-height: 1.3;
+    box-sizing: border-box;
+    margin: 0;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    border-radius: .5em;
+    appearance: none;
+    background-color: rgba(236, 230, 221, 0.5);
+    linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+    background-repeat: no-repeat, repeat;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%;
+    text-align: center;
+}
+
+/* Styling the date input elements */
+.date-style {
+    font-family: "Comic Sans MS", sans-serif;
+    font-size: 16px;
+    display: block;
+    width: 150px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: rgba(236, 230, 221, 0.5);
+    background-image: none;
+    border-radius: 4px;
+}
+
+/* Styling the button */
+.button-style {
+    display: block;
+    width: 70px;
+    background-color: rgba(236, 230, 221, 0.5);
+    font-family: "Comic Sans MS", sans-serif;
+    font-size: 16px;
+    line-height: 1.33;
+    border-radius: 6px;
+    text-align: center;
+    cursor: pointer;
+    margin-top: 20px;
+    text-decoration: none;
+}
+
+.button-style:hover {
+    background-color: rgba(169, 166, 157, 0.5);
 }
